Fix 'Invalid Filename causes Crash'.

KMyMoneyApp::slotGncImport() does not check if the file
has been really loaded and emits 'fileLoaded' where
in real it has not been loaded. The crash looks to be
a result of this mismatch.

BUG:354956
FIXED-IN:4.8.1